Snackbar: fix pushbutton padding
Before this, the padding-right was being set to 0 (probably to save up
space) but this is not the way to do it. It looks weird when the focus
is set to that button.

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -1434,7 +1434,7 @@ input[type='number']:hover::-webkit-outer-spin-button {
 }
 
 .snackbar.jsdialog-container #button.ui-pushbutton.jsdialog {
-	padding-right: 0;
+	padding: 8px;
 }
 
 #mobile-wizard.popup.snackbar #button,
